Fix timescale - should be microseconds not milliseconds

--- a/result/result.html
+++ b/result/result.html
@@ -182,7 +182,7 @@
                             display: true,
                             scaleLabel: {
                                 display: true,
-                                labelString: 'Time (Millisecond)'
+                                labelString: 'Time (Microseconds)'
                             }
                         }]
                     }
