--- a/result/result.html
+++ b/result/result.html
@@ -41,8 +41,8 @@
 <body>
     <script src="result/encode-msvc19.js"></script>
     <script src="result/decode-msvc19.js"></script>
-    <script src="result/encode-clang11.js"></script>
-    <script src="result/decode-clang11.js"></script>
+    <script src="result/encode-clang12.js"></script>
+    <script src="result/decode-clang12.js"></script>
     <script type="text/babel">
         //----------------------------------------------------------------------------- 
         function mergResult(encode, decode) {
@@ -194,16 +194,16 @@
         }
         //-----------------------------------------------------------------------------
         window.onload = function () {
-            // Clang 11
-            generateResultTable("table_encode_result_clang11", encode_result_clang11);
-            generateBarCharts("canvas_encode_result_clang11", encode_result_clang11, "Encode Results (Lower is better)");
+            // Clang12
+            generateResultTable("table_encode_result_clang12", encode_result_clang12);
+            generateBarCharts("canvas_encode_result_clang12", encode_result_clang12, "Encode Results (Lower is better)");
 
-            generateResultTable("table_decode_result_clang11", decode_result_clang11);
-            generateBarCharts("canvas_decode_result_clang11", decode_result_clang11, "Decode Results (Lower is better)");
+            generateResultTable("table_decode_result_clang12", decode_result_clang12);
+            generateBarCharts("canvas_decode_result_clang12", decode_result_clang12, "Decode Results (Lower is better)");
 
-            let mergResultVal_clang11 = mergResult(encode_result_clang11, decode_result_clang11);
-            generateResultTable("table_decode_encode_result_clang11", mergResultVal_clang11);
-            generateBarCharts("canvas_decode_encode_result_clang11", mergResultVal_clang11, "Decode + Encode Results (Lower is better)");
+            let mergResultVal_clang12 = mergResult(encode_result_clang12, decode_result_clang12);
+            generateResultTable("table_decode_encode_result_clang12", mergResultVal_clang12);
+            generateBarCharts("canvas_decode_encode_result_clang12", mergResultVal_clang12, "Decode + Encode Results (Lower is better)");
 
             // MSVC 2019
             generateResultTable("table_encode_result_msvc19", encode_result_msvc19);
@@ -222,12 +222,12 @@
     <div class="container">
         <div class="py-5 text-center">
             <h1>
-                Benchmark results (Clang 11.0.3 / Intel Core 5 8210Y @ 1.6GHz)
+                Benchmark results (Clang 12 / AMD5700G)
             </h1>
         </div>
         <p>
         <h2>Encode Results</h2>
-        <table class="table table-striped" id="table_encode_result_clang11">
+        <table class="table table-striped" id="table_encode_result_clang12">
             <thead class="thead-dark">
                 <tr></tr>
             </thead>
@@ -236,12 +236,12 @@
         </p>
 
         <p>
-            <canvas id="canvas_encode_result_clang11"></canvas>
+            <canvas id="canvas_encode_result_clang12"></canvas>
         </p>
 
         <p>
         <h2>Decode Results</h2>
-        <table class="table table-striped" id="table_decode_result_clang11">
+        <table class="table table-striped" id="table_decode_result_clang12">
             <thead class="thead-dark">
                 <tr></tr>
             </thead>
@@ -250,12 +250,12 @@
         </p>
 
         <p>
-            <canvas id="canvas_decode_result_clang11"></canvas>
+            <canvas id="canvas_decode_result_clang12"></canvas>
         </p>
 
         <p>
         <h2>Encode + Decode Results</h2>
-        <table class="table table-striped" id="table_decode_encode_result_clang11">
+        <table class="table table-striped" id="table_decode_encode_result_clang12">
             <thead class="thead-dark">
                 <tr></tr>
             </thead>
@@ -264,7 +264,7 @@
         </p>
 
         <p>
-            <canvas id="canvas_decode_encode_result_clang11"></canvas>
+            <canvas id="canvas_decode_encode_result_clang12"></canvas>
         </p>
 
         <div class="py-5 text-center">
