Updated results for VS 2022

--- a/result/result.html
+++ b/result/result.html
@@ -39,6 +39,8 @@
 </head>
 
 <body>
+    <script src="result/encode-msvc1940.js"></script>
+    <script src="result/decode-msvc1940.js"></script>
     <script src="result/encode-clang15.js"></script>
     <script src="result/decode-clang15.js"></script>
     <script type="text/babel">
@@ -202,6 +204,21 @@
             let mergResultVal_clang15 = mergResult(encode_result_clang15, decode_result_clang15);
             generateResultTable("table_decode_encode_result_clang15", mergResultVal_clang15);
             generateBarCharts("canvas_decode_encode_result_clang15", mergResultVal_clang15, "Decode + Encode Results (Lower is better)");
+
+            // MSVC 2022
+            generateResultTable("table_encode_result_msvc1940", encode_result_msvc1940);
+            generateBarCharts("canvas_encode_result_msvc1940", encode_result_msvc1940, "Encode Results (Lower is better)");
+
+            generateResultTable("table_decode_result_msvc1940", decode_result_msvc1940);
+            generateBarCharts("canvas_decode_result_msvc1940", decode_result_msvc1940, "Decode Results (Lower is better)");
+
+            let mergResultVal_msvc1940 = mergResult(encode_result_msvc1940, decode_result_msvc1940);
+            generateResultTable("table_decode_encode_result_msvc1940", mergResultVal_msvc1940);
+            generateBarCharts("canvas_decode_encode_result_msvc1940", mergResultVal_msvc1940, "Decode + Encode Results (Lower is better)");
+
+
+
+
         };
     </script>
     <!---Body start -->
@@ -253,6 +270,52 @@
             <canvas id="canvas_decode_encode_result_clang15"></canvas>
         </p>
 
+        <div class="py-5 text-center">
+            <h1>
+                Benchmark results (MSVC 2022 v17.10 / Intel i9-13900K @ 3.0GHz)
+            </h1>
+        </div>
+        <p>
+        <h2>Encode Results</h2>
+        <table class="table table-striped" id="table_encode_result_msvc1940">
+            <thead class="thead-dark">
+                <tr></tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+        </p>
+
+        <p>
+            <canvas id="canvas_encode_result_msvc1940"></canvas>
+        </p>
+
+        <p>
+        <h2>Decode Results</h2>
+        <table class="table table-striped" id="table_decode_result_msvc1940">
+            <thead class="thead-dark">
+                <tr></tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+        </p>
+
+        <p>
+            <canvas id="canvas_decode_result_msvc1940"></canvas>
+        </p>
+
+        <p>
+        <h2>Encode + Decode Results</h2>
+        <table class="table table-striped" id="table_decode_encode_result_msvc1940">
+            <thead class="thead-dark">
+                <tr></tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+        </p>
+
+        <p>
+            <canvas id="canvas_decode_encode_result_msvc1940"></canvas>
+        </p>
     </div>
     <!---Body end -->
 </body>
